--- a/package.json
+++ b/package.json
@@ -2,10 +2,11 @@
   "name": "html-css-js-template",
   "version": "1.0.0",
   "description": "HTML,CSS & JS template for Microverse. All linters and readme file included.",
-  "main": "index.html",
+  "private": true,
   "scripts": {
-    "linters": "yarn hint . && yarn run-stylelint && yarn eslint .",
-    "run-stylelint": "stylelint \"**/*.css\""
+    "linters": "npx hint . && npm run run-stylelint && npx eslint .",
+    "run-stylelint": "stylelint \"**/*.css\"",
+    "build": "webpack"
   },
   "keywords": [
     "Microverse"
@@ -14,13 +15,21 @@
   "license": "MIT",
   "devDependencies": {
     "babel-eslint": "10.x",
+    "css-loader": "^6.7.3",
     "eslint": "7.x",
     "eslint-config-airbnb-base": "14.x",
     "eslint-plugin-import": "2.x",
     "hint": "7.x",
+    "html-webpack-plugin": "^5.5.0",
+    "style-loader": "^3.3.1",
     "stylelint": "13.x",
     "stylelint-config-standard": "21.x",
     "stylelint-csstree-validator": "1.x",
-    "stylelint-scss": "3.x"
+    "stylelint-scss": "3.x",
+    "webpack": "^5.75.0",
+    "webpack-cli": "^5.0.1"
+  },
+  "dependencies": {
+    "lodash": "^4.17.21"
   }
 }
